css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;600&display=swap');

* {
    scroll-behavior: smooth;
    scroll-margin-top: 80px;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

*::-webkit-scrollbar { 
    display: none;
}

:root {
    --color-primary: #0c0c0c;
    --color-secondary: #FFF;
    --color-contrast: #181818;
    --color-text: #FFF;
    --color-text-alt: #000;
    --color-text-unselected: #d6d6d6;
    --color-nav-border: #383838;
    --color-background: #161616;
    --color-background-container: #d6d6d6;
    --color-background-container-alt: #a8a8a8;
}


/* Media query*/
@media screen and (max-width: 1080px) {
    /* Show hamburguer */
    .nav-large-screen {
        display: none;
    }

    .nav-hamburguer {
        display: flex;
    }

    /* Change logo */
    .container-first {
        background: linear-gradient(90deg, var(--color-background) 0%, transparent 100%), url("../assets/logo/org/bizarre_engine_2_logo.svg");
        background-repeat: no-repeat;
        background-size: 400px;
        background-position: calc(20dvw + 80%) 12.5dvh;
    }
    
    .nav-main-img {
        width: 192px;
    }
    
    /* Container */
    .container-first-title {
        font-size: 30px;
    }
    
    .container-first-img {
        width: 280px;
        height: auto;
        margin: 8px 12px;
        padding: 8px;
    }
    
    /* Items */
    .item-container-hide-on-mobile {
        display: none;
    }

    .item-container {
        width: 180px;
        min-height: 180px;
        margin: 5px;
    }

    .item-container-title {
        font-size: 16px;
    }

    .item-container-img {
        width: 64px;
        height: auto;
    }

    .item-container-content {
        font-size: 11px;
        width: 160px;
    }

    .item-button {
        font-size: 12px;
        margin: 10px;
        padding: 4px 8px;
    }
    
    .item-button img {
        width: 16px;
    }
}

@media screen and (min-width: 1080px) {
    /* Hide hamburguer */
    .nav-large-screen {
        display: flex;
    }

    .nav-hamburguer {
        display: none;
    }

    /* Change logo */
    .container-first {
        background: linear-gradient(90deg, var(--color-background) 0%, transparent 100%), url("../assets/logo/org/bizarre_engine_2_logo.svg");
        background-repeat: no-repeat;
        background-size: 512px;
        background-position: calc(5dvw + 95%) 10dvh;
    }

    .nav-main-img {
        width: 256px;
    }
    
    /* Container */
    .container-first-title {
        font-size: 40px;
    }

    .container-first-img {
        width: 512px;
        height: auto;
        margin: 8px 12px;
        padding: 8px;
    }
    
    /* Items */
    .item-container-hide-on-mobile {
        display: flex;
    }

    .item-container {
        width: 300px;
        min-height: 300px;
        margin: 10px;
    }

    .item-container-title {
        font-size: 22px;
    }

    .item-container-img {
        width: 96px;
        height: auto;
    }
    
    .item-container-content {
        font-size: 16px;
        width: 280px;
    }

    .item-button {
        font-size: 16px;
        margin: 16px;
        padding: 8px 16px;
    }
    
    .item-button img {
        width: 24px;
    }
}


/* Keyframes */
@keyframes page-startup-anim {
    0% {
        opacity: 0;
    }

    50% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@keyframes page-startup-disapear {
    from {
        opacity: 1;
        visibility: visible;
    }
    to {
        opacity: 0;
        visibility: hidden;
    }
}

@keyframes nav-button-side {
    from {
        opacity: 0;
        margin: 0;
    }
    to {
        opacity: 1;
        margin: 0px 16px;
    }
}

@keyframes nav-startup {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes nav-hamburguer-interact {
    0% {
        height: 0;
        opacity: 0;
    }
    100% {
        height: auto;
        opacity: 1;
    }
}

@keyframes home-startup {
    0% {
        text-shadow: 0px 0px 40px transparent;
    }
    50% {
        text-shadow: 0px 0px 20px var(--color-text-unselected);
    }
    100% {
        text-shadow: 0px 0px 40px transparent;
    }
}

@keyframes container-first-down {
    0% {
        transform: translateY(-25px);
        -webkit-transform: translateY(-25px);
        -moz-transform: translateY(-25px);
        -ms-transform: translateY(-25px);
        -o-transform: translateY(-25px);
    }
    50% {
        transform: translateY(25px);
        -webkit-transform: translateY(25px);
        -moz-transform: translateY(25px);
        -ms-transform: translateY(25px);
        -o-transform: translateY(25px);
    }
    100% {
        transform: translateY(-25px);
        -webkit-transform: translateY(-25px);
        -moz-transform: translateY(-25px);
        -ms-transform: translateY(-25px);
        -o-transform: translateY(-25px);
    }
}

/* Other */
.disable-scrolling {
    height: 100%;
    overflow: hidden;
}

.enable-scrolling {
    overflow: scroll;
}

/* Page Startup */
.page-startup {
    user-select: none;
    z-index: 100;
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--color-background);
}

.page-startup p {
    font-size: 24px;
    font-family: "Kanit", sans-serif;
    font-weight: 200;
    font-style: normal;
    text-transform: uppercase;
    text-decoration: none;
    color: var(--color-text);
    margin: 0;
    padding: 40dvh 0 0;
}

.page-startup img {
    width: 256px;
    height: 256px;
    animation: page-startup-anim 2s infinite linear;
    -webkit-animation: page-startup-anim 2s infinite linear;
}

.page-startup-loaded {
    animation: page-startup-disapear 0.5s forwards linear;
    -webkit-animation: page-startup-disapear 0.5s forwards linear;
}
/* ... */

